# gui

./: .pre-commit-config.yaml  README.md  gui.py  packages.txt  pyproject.toml  requirements.txt  setup.py  setup_requirements.txt
gui.egg-info/: PKG-INFO  SOURCES.txt
